tests/type-errors/no_builtin_for_aggregate.arl
archetype no_builtin_for_aggregate

variable res : aggregate<int> = []

entry exec () {
  effect {
    res := [1; 2; 3]
  }
}
